added cassandra snapshots and events store

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -18,7 +18,6 @@ localStores {
 }
 
 postgresDemo {
-
   akka.persistence.journal.plugin = "jdbc-journal"
   akka.persistence.snapshot-store.plugin = "jdbc-snapshot-store"
 
@@ -44,5 +43,13 @@ postgresDemo {
   jdbc-snapshot-store {
     use-shared-db = "slick"
   }
+
+}
+
+cassandraDemo {
+  akka.persistence.journal.plugin = "cassandra-journal"
+  akka.persistence.snapshot-store.plugin = "cassandra-snapshot-store"
+
+  // default value
 
 }
