--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -53,3 +53,36 @@ cassandraDemo {
   // default value
 
 }
+
+customSerializerDemo {
+  akka.persistence.journal.plugin = "cassandra-journal"
+  akka.persistence.snapshot-store.plugin = "cassandra-snapshot-store"
+
+  akka.actor {
+    serializers {
+      java = "akka.serialization.JavaSerializer"
+      rtjvm = "part3_stores_serialization.UserRegistrationSerializer"
+    }
+
+    serialization-bindings {
+      "part3_stores_serialization.UserRegistered" = rtjvm
+      // java serializer is used by default
+    }
+  }
+
+}
+
+eventAdapters {
+  akka.persistence.journal.plugin = "cassandra-journal"
+  akka.persistence.snapshot-store.plugin = "cassandra-snapshot-store"
+
+  cassandra-journal {
+    event-adapters {
+      guitar-inventory-enhancer = "part4_practices.EventAdapters$GuitarReadEventAdapter"
+    }
+
+    event-adapter-bindings {
+      "part4_practices.EventAdapters$GuitarAdded" = guitar-inventory-enhancer
+    }
+  }
+}
