--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -85,4 +85,36 @@ eventAdapters {
       "part4_practices.EventAdapters$GuitarAdded" = guitar-inventory-enhancer
     }
   }
+
+}
+
+detachingModels {
+  akka.persistence.journal.plugin = "cassandra-journal"
+  akka.persistence.snapshot-store.plugin = "cassandra-snapshot-store"
+
+  cassandra-journal {
+    event-adapters {
+      detach-adapter = "part4_practices.ModelAdaptor"
+    }
+
+    event-adapter-bindings {
+      "part4_practices.DomainModel$CouponApplied" = detach-adapter
+      "part4_practices.DataModel$WrittenCouponApplied" = detach-adapter
+    }
+  }
+}
+
+persistenceQuery {
+  akka.persistence.journal.plugin = "cassandra-journal"
+  akka.persistence.snapshot-store.plugin = "cassandra-snapshot-store"
+
+  cassandra-journal {
+      event-adapters {
+        tagging =  = "part4_practices.PersistenceQueryDemo$MusicStoreEventAdapter"
+      }
+
+      event-adapter-bindings {
+        "part4_practices.PersistenceQueryDemo$PlaylistPurchased" = tagging
+      }
+    }
 }
